--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login</h4>
-                    <button type="button" class="close" data-dismis="modal">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -66,8 +66,78 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <button type="button" class="btn btn-secondary btn-sm ml-suto" data-dismis="modal">Cancel</button>
+                            <button type="button" class="btn btn-secondary btn-sm ml-2" data-dismiss="modal">Cancel</button>
                             <button type="submit" class="btn btn-primary btn-sm ml-1">Sign In</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="noofguest" class="col-12 col-sm-3">Number of Guests</label>
+                            <div class="col-12 col-sm-9">
+                                <div class="form-check form-check-inline active">
+                                    <input type="radio" class="form-check-input" name="radio" id="radio1" value="option1" checked>
+                                    <label class="form-check-label" for="radio1">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" class="form-check-input" name="radio" id="radio2" value="option2">
+                                    <label class="form-check-label" for="radio2">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" class="form-check-input" name="radio" id="radio3" value="option3">
+                                    <label class="form-check-label" for="radio3">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" class="form-check-input" name="radio" id="radio4" value="option4">
+                                    <label class="form-check-label" for="radio4">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" class="form-check-input" name="radio" id="radio5" value="option5">
+                                    <label class="form-check-label" for="radio5">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input type="radio" class="form-check-input" name="radio" id="radio6" value="option6">
+                                    <label class="form-check-label" for="radio6">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="smoking" class="col-12 col-sm-3">Section</label>
+                            <div class="col-6 col-sm-4 btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                    <input type="radio" name="smoking" id="nonSmoking" checked>Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                    <input type="radio" name="smoking" id="smoking"> Smoking
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="dateandtime" class="col-12 col-sm-3">Date and Time</label>
+                            <div class="col-6 col-sm-4">
+                                <input type="text" class="form-control" placeholder="Date">
+                            </div>
+                            <div class="col-6 col-sm-4">
+                                <input type="text" class="form-control" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-sm-3 col-sm-9">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -86,7 +156,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>" data-placement="bottom" href="#reserveform">Reserve Table</a>
+                    <a role="button" class="btn btn-block btn-warning" data-toggle="modal" href="#reserveModal">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -133,105 +203,15 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                </div>
-            </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3 order-sm-last">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="col col-sm col-md order-sm-first">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
-                    <div class="media-body">
-                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
-                        <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger" id="carouselPause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger" id="carouselPlay">
+                            <span class="fa fa-play"></span>
+                        </button>
                     </div>
                 </div>
-            </div>
-        </div>
-
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
-                <h3>This Month's Promotions</h3>
-            </div>
-            <div class="col col-sm col-md">
-                <div class="media">
-                    <div class="media-body">
-                        <h2 class="mt-0">Weekend Grand Buffet<span class="badge badge-danger">NEW</span></h2>
-                        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-                    </div>
-                    <img class="d-flex ml-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
-                </div>
-            </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3 order-sm-last">
-                <h3>Meet our Culinary Specialists</h3>
-            </div>
-            <div class="col col-sm col-md order-sm-first">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="Alberto Somayya">
-                    <div class="media-body">
-                        <h2>Alberto Somayya</h2>
-                        <h4>Executive Chef</h4>
-                        <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="card col-12 col-sm-8 offset-sm-2" id="reserve">
-                <h3 class="card-header text-white bg-warning">Reserve a Table</h3>
-                <form class="card-body">
-                    <div class="form-group row">
-                        <label for="noofguest" class="col-12 col-sm-3">Number of Guests</label>
-                        <div class="col-12 col-sm-9">
-                            <div class="form-check form-check-inline">
-                                <input type="radio" class="form-check-input" name="radio" id="radio1" value="option1">
-                                <label class="form-check-label" for="radio1">1</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input type="radio" class="form-check-input" name="radio" id="radio2" value="option2">
-                                <label class="form-check-label" for="radio2">2</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input type="radio" class="form-check-input" name="radio" id="radio3" value="option3">
-                                <label class="form-check-label" for="radio3">3</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input type="radio" class="form-check-input" name="radio" id="radio4" value="option4">
-                                <label class="form-check-label" for="radio4">4</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input type="radio" class="form-check-input" name="radio" id="radio5" value="option5">
-                                <label class="form-check-label" for="radio5">5</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input type="radio" class="form-check-input" name="radio" id="radio6" value="option6">
-                                <label class="form-check-label" for="radio6">6</label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="dateandtime" class="col-12 col-sm-3">Date and Time</label>
-                        <div class="col-6 col-sm-4">
-                            <input type="text" class="form-control" placeholder="Date">
-                        </div>
-                        <div class="col-6 col-sm-4">
-                            <input type="text" class="form-control" placeholder="Time">
-                        </div>
-                    </div>
-                    <div class="form-group row">
-                        <div class="offset-sm-3 col-sm-9">
-                            <button type="submit" class="btn btn-primary">Reserve</button>
-                        </div>
-                    </div>
-                </form>
             </div>
         </div>
 
@@ -285,7 +265,15 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
+            $("#mycarousel").carousel({
+                interval: 1000
+            });
+            $("#carouselPause").click(function() {
+                $("#mycarousel").carousel('pause');
+            });
+            $("#carouselPlay").click(function() {
+                $("#mycarousel").carousel('cycle');
+            });
         });
     </script>
 </body>
