--- a/index.html
+++ b/index.html
@@ -203,14 +203,9 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger" id="carouselPause">
-                            <span class="fa fa-pause"></span>
-                        </button>
-                        <button class="btn btn-danger" id="carouselPlay">
-                            <span class="fa fa-play"></span>
-                        </button>
-                    </div>
+                    <button class="btn btn-danger" id="carouselButton">
+                        <span class="fa fa-pause"></span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -268,11 +263,16 @@
             $("#mycarousel").carousel({
                 interval: 1000
             });
-            $("#carouselPause").click(function() {
-                $("#mycarousel").carousel('pause');
-            });
-            $("#carouselPlay").click(function() {
-                $("#mycarousel").carousel('cycle');
+            $("#carouselButton").click(function() {
+                if ($("#carouselButton").children("span").hasClass('fa-pause')) {
+                    $("#mycarousel").carousel('pause');
+                    $("#carouselButton").children("span").removeClass('fa-pause');
+                    $("#carouselButton").children("span").addClass('fa-play');
+                } else {
+                    $("#mycarousel").carousel('cycle');
+                    $("#carouselButton").children("span").removeClass('fa-play');
+                    $("#carouselButton").children("span").addClass('fa-pause');
+                }
             });
         });
     </script>
