--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                <a id="loginModalButton">
                         <span class="fa fa-sign-in"></span> Login
                 </a>
                 </span>
@@ -156,7 +156,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block btn-warning" data-toggle="modal" href="#reserveModal">Reserve Table</a>
+                    <a role="button" id="reserveModalButton" class="btn btn-block btn-warning" href="#reserveModal">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -273,6 +273,12 @@
                     $("#carouselButton").children("span").removeClass('fa-play');
                     $("#carouselButton").children("span").addClass('fa-pause');
                 }
+            });
+            $("#loginModalButton").click(function() {
+                $("#loginModal").modal('toggle');
+            });
+            $("#reserveModalButton").click(function() {
+                $("#reserveModal").modal('toggle');
             });
         });
     </script>
